--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,6 +18,9 @@
       left: 0
     &__swiper-button-next 
       right: 0
+  .modal__form div 
+    &.invalid 
+      top: 3.8rem
 
 @media screen and (max-width: 992px) 
   .menu 
